--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    activityVersion = '1.2.3'
+    appCompatVersion = '1.3.0'
+    room_version = "2.3.0"
+}
