--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.tw_fieldboss_alarm"
+        applicationId "com.tw_fieldboss_alarm"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 1
+        versionCode 2
         versionName "0.4.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
